2006-05-12  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/janino/org/codehaus/janino/Java.java:
        * src/janino/org/codehaus/janino/UnitCompiler.java:
        Fixup support for break and continue statements
        inside of loops. A while, do, or for loop can
        contain a break or continue statement that
        does not does not complete normally, but
        the loop can still complete normally. This
        patch also fixes up unconditional if logic
        so that it will correctly propagate the dead
        code flag up the stack.

2006-05-01  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tjc/tjc/library/compileproc.tcl:
        Fix problem in compileproc_scan_keys where
        a container command with a nested expr
        block that contained more than 1 nested
        command would result in a compiler error.
        Add compileproc_scan_keys_in_container and
        compileproc_scan_keys_in_container_sublist
        so that container keys are scanned in a
        type specific way. Recurse on a keys sublist
        to fix the multiple nested commands bug.
        * tests/tjc/compileproc_2.test: Add test
        case for multiple nested commands bug.

2006-04-29  Mo DeJong  <mdejong@users.sourceforge.net>

        * configure: Regen.
        * configure.in:
        * src/pkgIndex.tcl:
        * src/jacl/tcl/lang/Interp.java:
        * src/tcljava/tcl/lang/BlendExtension.java:
        * unix/tools/vutil/current:
        * win/makefile.vc: Update version to 1.4.0.

2006-04-26  Mo DeJong  <mdejong@users.sourceforge.net>

        * docs/contents.html: Add new Jacl and
        Tcl Blend topics directory.
        * docs/TclJava/JavaTryCmd.html: Mention
        that java::try can't be used to catch
        a TclInterruptedException.
        * docs/Topics/EventLoop.html: Document Tcl
        event loop basics.
        * docs/Topics/SetInterrupted.html: Document
        new interp.setInterrupted() API.